--- a/src/output.css
+++ b/src/output.css
@@ -800,6 +800,9 @@
   .-mt-4 {
     margin-top: calc(var(--spacing) * -4);
   }
+  .-mt-8 {
+    margin-top: calc(var(--spacing) * -8);
+  }
   .-mt-10 {
     margin-top: calc(var(--spacing) * -10);
   }
@@ -1043,6 +1046,9 @@
   .h-\[20px\] {
     height: 20px;
   }
+  .h-\[120px\] {
+    height: 120px;
+  }
   .h-\[180px\] {
     height: 180px;
   }
@@ -1168,6 +1174,9 @@
   }
   .w-\[120\%\] {
     width: 120%;
+  }
+  .w-\[150px\] {
+    width: 150px;
   }
   .w-\[200px\] {
     width: 200px;
@@ -2113,9 +2122,6 @@
   .bg-\(color\:--my-color\) {
     background-color: var(--my-color);
   }
-  .bg-\[\#2F4673\] {
-    background-color: #2F4673;
-  }
   .bg-\[\#011f5b\] {
     background-color: #011f5b;
   }
@@ -2140,9 +2146,6 @@
   .bg-\[\#0e2757\] {
     background-color: #0e2757;
   }
-  .bg-\[\#94A0B8\] {
-    background-color: #94A0B8;
-  }
   .bg-\[\#102c62\] {
     background-color: #102c62;
   }
@@ -2151,6 +2154,12 @@
   }
   .bg-\[\#122e65\] {
     background-color: #122e65;
+  }
+  .bg-\[\#123670\] {
+    background-color: #123670;
+  }
+  .bg-\[\#133978\] {
+    background-color: #133978;
   }
   .bg-\[\#133c7e\] {
     background-color: #133c7e;
@@ -2161,11 +2170,17 @@
   .bg-\[\#1d52a8\] {
     background-color: #1d52a8;
   }
+  .bg-\[\#2F4673\] {
+    background-color: #2F4673;
+  }
   .bg-\[\#011F5B\] {
     background-color: #011F5B;
   }
   .bg-\[\#0088cc\] {
     background-color: #0088cc;
+  }
+  .bg-\[\#94A0B8\] {
+    background-color: #94A0B8;
   }
   .bg-\[\#203dcd\] {
     background-color: #203dcd;
@@ -2187,12 +2202,6 @@
   }
   .bg-\[\#2062cded\] {
     background-color: #2062cded;
-  }
-  .bg-\[\#123670\] {
-    background-color: #123670;
-  }
-  .bg-\[\#133978\] {
-    background-color: #133978;
   }
   .bg-\[\#990000\] {
     background-color: #990000;
@@ -2513,6 +2522,9 @@
   .p-12 {
     padding: calc(var(--spacing) * 12);
   }
+  .p-\[10px\] {
+    padding: 10px;
+  }
   .p-\[20px\] {
     padding: 20px;
   }
@@ -2536,6 +2548,9 @@
   }
   .px-\[2\%\] {
     padding-inline: 2%;
+  }
+  .px-\[10px\] {
+    padding-inline: 10px;
   }
   .px-\[20px\] {
     padding-inline: 20px;
@@ -2627,6 +2642,9 @@
   .pr-1 {
     padding-right: calc(var(--spacing) * 1);
   }
+  .pr-4 {
+    padding-right: calc(var(--spacing) * 4);
+  }
   .pr-6 {
     padding-right: calc(var(--spacing) * 6);
   }
@@ -2647,6 +2665,9 @@
   }
   .pr-52 {
     padding-right: calc(var(--spacing) * 52);
+  }
+  .pr-58 {
+    padding-right: calc(var(--spacing) * 58);
   }
   .pr-60 {
     padding-right: calc(var(--spacing) * 60);
@@ -2747,6 +2768,10 @@
   .text-5xl {
     font-size: var(--text-5xl);
     line-height: var(--tw-leading, var(--text-5xl--line-height));
+  }
+  .text-base {
+    font-size: var(--text-base);
+    line-height: var(--tw-leading, var(--text-base--line-height));
   }
   .text-lg {
     font-size: var(--text-lg);
@@ -3634,6 +3659,11 @@
       margin-inline: auto;
     }
   }
+  .md\:-mt-14 {
+    @media (width >= 48rem) {
+      margin-top: calc(var(--spacing) * -14);
+    }
+  }
   .md\:mt-12 {
     @media (width >= 48rem) {
       margin-top: calc(var(--spacing) * 12);
@@ -3664,14 +3694,34 @@
       display: inline;
     }
   }
+  .md\:h-\[180px\] {
+    @media (width >= 48rem) {
+      height: 180px;
+    }
+  }
+  .md\:h-\[400px\] {
+    @media (width >= 48rem) {
+      height: 400px;
+    }
+  }
   .md\:w-1\/3 {
     @media (width >= 48rem) {
       width: calc(1/3 * 100%);
     }
   }
+  .md\:w-2\/3 {
+    @media (width >= 48rem) {
+      width: calc(2/3 * 100%);
+    }
+  }
   .md\:w-\[80\%\] {
     @media (width >= 48rem) {
       width: 80%;
+    }
+  }
+  .md\:w-\[200px\] {
+    @media (width >= 48rem) {
+      width: 200px;
     }
   }
   .md\:w-full {
@@ -3722,14 +3772,52 @@
       }
     }
   }
+  .md\:p-\[20px\] {
+    @media (width >= 48rem) {
+      padding: 20px;
+    }
+  }
   .md\:px-6 {
     @media (width >= 48rem) {
       padding-inline: calc(var(--spacing) * 6);
     }
   }
+  .md\:px-\[20px\] {
+    @media (width >= 48rem) {
+      padding-inline: 20px;
+    }
+  }
+  .md\:py-\[20px\] {
+    @media (width >= 48rem) {
+      padding-block: 20px;
+    }
+  }
+  .md\:pr-58 {
+    @media (width >= 48rem) {
+      padding-right: calc(var(--spacing) * 58);
+    }
+  }
   .md\:text-left {
     @media (width >= 48rem) {
       text-align: left;
+    }
+  }
+  .md\:text-2xl {
+    @media (width >= 48rem) {
+      font-size: var(--text-2xl);
+      line-height: var(--tw-leading, var(--text-2xl--line-height));
+    }
+  }
+  .md\:text-3xl {
+    @media (width >= 48rem) {
+      font-size: var(--text-3xl);
+      line-height: var(--tw-leading, var(--text-3xl--line-height));
+    }
+  }
+  .md\:text-lg {
+    @media (width >= 48rem) {
+      font-size: var(--text-lg);
+      line-height: var(--tw-leading, var(--text-lg--line-height));
     }
   }
   .lg\:w-\[60\%\] {
